增加引导文本

--- a/run/Echo of Keys_Data/boot.config
+++ b/run/Echo of Keys_Data/boot.config
@@ -1,6 +1,12 @@
+player-connection-mode=Listen
+player-connection-guid=3969747605
+player-connection-debug=0
+player-connection-project-name=Echo of Keys
+player-connection-ip=192.168.56.1
+player-connection-ip=10.31.151.186
 gfx-enable-gfx-jobs=1
 gfx-enable-native-gfx-jobs=1
 wait-for-native-debugger=0
 hdr-display-enabled=0
 gc-max-time-slice=3
-build-guid=80f2076538a6490eae1eeb92a0d1b7d4
+build-guid=593379e02d6e4451bbff095f862faf19
