增加两个checkpoint，解决两个钥匙拿不到以及一个卡死的恶性bug

--- a/run/Heart Keys_Data/boot.config
+++ b/run/Heart Keys_Data/boot.config
@@ -1,6 +1,12 @@
+player-connection-mode=Listen
+player-connection-guid=4238836365
+player-connection-debug=0
+player-connection-project-name=Heart Keys
+player-connection-ip=192.168.56.1
+player-connection-ip=10.32.100.145
 gfx-enable-gfx-jobs=1
 gfx-enable-native-gfx-jobs=1
 wait-for-native-debugger=0
 hdr-display-enabled=0
 gc-max-time-slice=3
-build-guid=dea75005d5544538a0e2302ecec002dc
+build-guid=5788c29d54934bedafce664019aca193
